Fix HTML structure and tags in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>EL AMRANY Anas - Portfolio</title>
 </head>
 <body>
-    <h1EL AMRANY Anas</h1>
+    <h1>EL AMRANY Anas</h1>
     <p>Welcome to my portfolio website!</p>
 </body>
 </html>
