Revise portfolio content and add contact section
Updated portfolio information and added contact details.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EL AMRANY Anas - Portfolio</title>
+    <title>Anas EL AMRANY - Portfolio</title>
 </head>
 <body>
-    <h1>EL AMRANY Anas</h1>
-    <p>Welcome to my portfolio website!</p>
+    <h1>Anas EL AMRANY</h1>
+    <p>Computer Science Engineering Student at ENSEEIHT.</p>
+    <h2>About Me</h2>
+    <p>Interested in AI, system modeling, and programming (Python, C, MATLAB).</p>
+    <h2>Contact</h2>
+    <p>Email: elamranianas291@gmail.com</p>
 </body>
 </html>
+
+
