--- a/index.html
+++ b/index.html
@@ -1,17 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Anas EL AMRANY - Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Anas EL AMRANY - E-Portfolio</title>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    .tabs { display: flex; background: #eee; margin-top: 20px;}
+    .tabs button {
+      background: #eee; border: none; padding: 10px 20px; cursor: pointer;
+      font-weight: bold; transition: background 0.2s;
+    }
+    .tabs button.active { background: #ccc; }
+    .tab-content { display: none; padding: 20px; }
+    .tab-content.active { display: block; background: #f9f9f9; }
+  </style>
 </head>
 <body>
-    <h1>Anas EL AMRANY</h1>
-    <p>Computer Science Engineering Student at ENSEEIHT.</p>
-    <h2>About Me</h2>
-    <p>Interested in AI, system modeling, and programming (Python, C, MATLAB).</p>
-    <h2>Contact</h2>
-    <p>Email: elamranianas291@gmail.com</p>
+  <h1>Anas EL AMRANY</h1>
+  <p>Computer Science Engineering Student at ENSEEIHT</p>
+  <p>Email: elamranianas291@gmail.com</p>
+
+  <div class="tabs">
+    <button onclick="showTab('home')" class="active">Home</button>
+    <button onclick="showTab('eng')" >Engineering Courses</button>
+    <button onclick="showTab('mobility')">Mobility</button>
+    <button onclick="showTab('civic')">Civic Engagement</button>
+    <button onclick="showTab('sports')">Sports & Activities</button>
+    <button onclick="showTab('career')">Career Development</button>
+  </div>
+  
+  <div id="home" class="tab-content active">
+    <h2>Home</h2>
+    <p>Welcome to my portfolio. Here you’ll find my experiences, projects, and future plans.</p>
+  </div>
+  <div id="eng" class="tab-content">
+    <h2>Engineering Courses</h2>
+    <p>Details about my engineering projects, courses, and technical skills.</p>
+  </div>
+  <div id="mobility" class="tab-content">
+    <h2>Mobility</h2>
+    <p>Reflections and information about any mobility or study abroad experiences.</p>
+  </div>
+  <div id="civic" class="tab-content">
+    <h2>Civic Engagement</h2>
+    <p>Description of civic or community engagement activities.</p>
+  </div>
+  <div id="sports" class="tab-content">
+    <h2>Sports & Activities</h2>
+    <p>Extracurricular involvement, sports, and other interests.</p>
+  </div>
+  <div id="career" class="tab-content">
+    <h2>Career Development</h2>
+    <p>My CV, career interests, and professional growth plans.</p>
+  </div>
+
+  <script>
+    function showTab(tabId) {
+      document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+      document.querySelectorAll('.tabs button').forEach(btn => btn.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+      const btnIndex = {home:0, eng:1, mobility:2, civic:3, sports:4, career:5}[tabId];
+      document.querySelectorAll('.tabs button')[btnIndex].classList.add('active');
+    }
+  </script>
 </body>
 </html>
+
 
 
