--- a/index.html
+++ b/index.html
@@ -4,54 +4,93 @@
   <meta charset="UTF-8">
   <title>Anas EL AMRANY - E-Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; }
-    .tabs { display: flex; background: #eee; margin-top: 20px;}
-    .tabs button {
-      background: #eee; border: none; padding: 10px 20px; cursor: pointer;
-      font-weight: bold; transition: background 0.2s;
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #1b263b;
+      color: #dde6ed;
+      margin: 0;
     }
-    .tabs button.active { background: #ccc; }
-    .tab-content { display: none; padding: 20px; }
-    .tab-content.active { display: block; background: #f9f9f9; }
+    .container {
+      max-width: 700px;
+      margin: 40px auto;
+      background: #232f3e;
+      border-radius: 16px;
+      box-shadow: 0 4px 24px #0004;
+      padding: 32px;
+    }
+    h1 {
+      color: #ffb703;
+      margin-bottom: 0;
+    }
+    h2 { color: #8ecae6; }
+    .header-info { margin-bottom: 32px; }
+    .tabs {
+      display: flex;
+      background: #334251;
+      border-radius: 8px 8px 0 0;
+      overflow: hidden;
+      margin-bottom: 0;
+    }
+    .tabs button {
+      flex: 1;
+      background: #334251; border: none; padding: 12px 8px; cursor: pointer;
+      color: #dde6ed; font-weight: 600;
+      outline: none; transition: background 0.2s;
+      font-size: 1em;
+    }
+    .tabs button.active { background: #3e8ed0; color: #fff; }
+    .tab-content {
+      display: none; padding: 22px; min-height: 120px;
+      background: #222e3d; border-radius: 0 0 10px 10px;
+      margin-bottom: 12px;
+      box-shadow: 0 2px 10px #0002;
+    }
+    .tab-content.active { display: block; }
+    a { color: #ffb703; text-decoration: none;}
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
-  <h1>Anas EL AMRANY</h1>
-  <p>Computer Science Engineering Student at ENSEEIHT</p>
-  <p>Email: elamranianas291@gmail.com</p>
+  <div class="container">
+    <div class="header-info">
+      <h1>Anas EL AMRANY</h1>
+      <p>Computer Science Engineering Student at ENSEEIHT</p>
+      <p>Email: <a href="mailto:elamranianas291@gmail.com">elamranianas291@gmail.com</a></p>
+    </div>
 
-  <div class="tabs">
-    <button onclick="showTab('home')" class="active">Home</button>
-    <button onclick="showTab('eng')" >Engineering Courses</button>
-    <button onclick="showTab('mobility')">Mobility</button>
-    <button onclick="showTab('civic')">Civic Engagement</button>
-    <button onclick="showTab('sports')">Sports & Activities</button>
-    <button onclick="showTab('career')">Career Development</button>
-  </div>
-  
-  <div id="home" class="tab-content active">
-    <h2>Home</h2>
-    <p>Welcome to my portfolio. Here you’ll find my experiences, projects, and future plans.</p>
-  </div>
-  <div id="eng" class="tab-content">
-    <h2>Engineering Courses</h2>
-    <p>Details about my engineering projects, courses, and technical skills.</p>
-  </div>
-  <div id="mobility" class="tab-content">
-    <h2>Mobility</h2>
-    <p>Reflections and information about any mobility or study abroad experiences.</p>
-  </div>
-  <div id="civic" class="tab-content">
-    <h2>Civic Engagement</h2>
-    <p>Description of civic or community engagement activities.</p>
-  </div>
-  <div id="sports" class="tab-content">
-    <h2>Sports & Activities</h2>
-    <p>Extracurricular involvement, sports, and other interests.</p>
-  </div>
-  <div id="career" class="tab-content">
-    <h2>Career Development</h2>
-    <p>My CV, career interests, and professional growth plans.</p>
+    <div class="tabs">
+      <button onclick="showTab('home')" class="active">Home</button>
+      <button onclick="showTab('eng')" >Engineering Courses</button>
+      <button onclick="showTab('mobility')">Mobility</button>
+      <button onclick="showTab('civic')">Civic Engagement</button>
+      <button onclick="showTab('sports')">Sports & Activities</button>
+      <button onclick="showTab('career')">Career Development</button>
+    </div>
+    
+    <div id="home" class="tab-content active">
+      <h2>Home</h2>
+      <p>Welcome to my portfolio. Here you’ll find my experiences, projects, and future plans.</p>
+    </div>
+    <div id="eng" class="tab-content">
+      <h2>Engineering Courses</h2>
+      <p>Details about my engineering projects, courses, and technical skills.</p>
+    </div>
+    <div id="mobility" class="tab-content">
+      <h2>Mobility</h2>
+      <p>Reflections and information about any mobility or study abroad experiences.</p>
+    </div>
+    <div id="civic" class="tab-content">
+      <h2>Civic Engagement</h2>
+      <p>Description of civic or community engagement activities.</p>
+    </div>
+    <div id="sports" class="tab-content">
+      <h2>Sports & Activities</h2>
+      <p>Extracurricular involvement, sports, and other interests.</p>
+    </div>
+    <div id="career" class="tab-content">
+      <h2>Career Development</h2>
+      <p>My CV, career interests, and professional growth plans.</p>
+    </div>
   </div>
 
   <script>
@@ -65,6 +104,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
