--- a/index.html
+++ b/index.html
@@ -5,49 +5,81 @@
   <title>Anas EL AMRANY - E-Portfolio</title>
   <style>
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: #1b263b;
-      color: #dde6ed;
+      background: #19273a;
       margin: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      color: #e8eaf6;
     }
     .container {
-      max-width: 700px;
-      margin: 40px auto;
-      background: #232f3e;
-      border-radius: 16px;
-      box-shadow: 0 4px 24px #0004;
-      padding: 32px;
+      max-width: 800px;
+      margin: 36px auto 0 auto;
+      background: #22314a;
+      border-radius: 18px;
+      box-shadow: 0 6px 32px #0004;
+      padding: 38px 38px 26px 38px;
+      min-height: 400px;
     }
     h1 {
-      color: #ffb703;
+      color: #90caf9;
       margin-bottom: 0;
+      font-size: 2.7em;
+      letter-spacing: 2px;
     }
-    h2 { color: #8ecae6; }
-    .header-info { margin-bottom: 32px; }
+    .header-info {
+      margin-bottom: 18px;
+      border-bottom: 1px solid #355070;
+      padding-bottom: 20px;
+    }
+    .header-info p {
+      margin: 6px 0 2px 0;
+      color: #b8c4d1;
+    }
+    a { color: #ffd166; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
     .tabs {
       display: flex;
-      background: #334251;
-      border-radius: 8px 8px 0 0;
+      justify-content: center;
+      background: #263659;
+      border-radius: 10px 10px 0 0;
       overflow: hidden;
-      margin-bottom: 0;
+      margin: 0 -38px 0 -38px;
+      box-shadow: 0 2px 6px #0002;
     }
     .tabs button {
       flex: 1;
-      background: #334251; border: none; padding: 12px 8px; cursor: pointer;
-      color: #dde6ed; font-weight: 600;
-      outline: none; transition: background 0.2s;
-      font-size: 1em;
+      padding: 14px 8px;
+      background: none;
+      border: none;
+      color: #b8c4d1;
+      font-weight: bold;
+      font-size: 1.05em;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
     }
-    .tabs button.active { background: #3e8ed0; color: #fff; }
+    .tabs button.active, .tabs button:hover {
+      background: #6096ba;
+      color: #fff;
+    }
     .tab-content {
-      display: none; padding: 22px; min-height: 120px;
-      background: #222e3d; border-radius: 0 0 10px 10px;
-      margin-bottom: 12px;
-      box-shadow: 0 2px 10px #0002;
+      display: none;
+      background: #18263c;
+      border-radius: 0 0 10px 10px;
+      margin-bottom: 8px;
+      margin-top: 0;
+      min-height: 120px;
+      padding: 28px 17px;
+      box-shadow: 0 2px 8px #0001;
     }
-    .tab-content.active { display: block; }
-    a { color: #ffb703; text-decoration: none;}
-    a:hover { text-decoration: underline; }
+    .tab-content.active {
+      display: block;
+      animation: fadeIn 0.4s;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0;}
+      to { opacity: 1;}
+    }
+    h2 { color: #ffd166; }
   </style>
 </head>
 <body>
@@ -104,6 +136,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
