--- a/index.html
+++ b/index.html
@@ -3,110 +3,137 @@
 <head>
   <meta charset="UTF-8">
   <title>Anas EL AMRANY - E-Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900;700;500&family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       min-height: 100vh;
-      background: linear-gradient(120deg,#e0c3fc 0%, #8ec5fc 100%);
       margin: 0;
-      font-family: 'Roboto', Arial, sans-serif;
-      color: #1b263b;
+      background: linear-gradient(120deg,#f6d365 0%, #fda085 100%);
+      font-family: 'Karla', Arial, sans-serif;
       transition: background 0.5s;
+      display: flex; align-items: center; justify-content: center;
     }
     .container {
-      max-width: 880px;
-      margin: 50px auto;
-      background: rgba(255,255,255,0.95);
-      border-radius: 28px;
-      box-shadow: 0 6px 40px #aab7e700;
-      padding: 38px 44px 34px 44px;
-      min-height: 560px;
+      width: 95vw; max-width: 850px;
+      background: rgba(255,255,255,0.96);
+      border-radius: 30px;
+      box-shadow: 0 12px 60px #dfbfbf66, 0 4px 24px #ccc2fa44;
+      padding: 40px 50px 34px 50px;
+      min-height: 540px;
+      position: relative;
+      overflow: hidden;
     }
     h1 {
       font-family: 'Montserrat', Arial, sans-serif;
-      color: #4361ee;
-      margin-bottom: 0px;
+      font-weight: 900;
+      color: #6c63ff;
       font-size: 2.7em;
-      letter-spacing: 1px;
-      text-align: left;
+      letter-spacing: 2px;
+      margin-bottom: 7px;
+      text-shadow: 0 2px 10px #dfbfbf33;
     }
-    .headline { font-family: 'Montserrat', Arial, sans-serif; font-weight: 400; font-size: 1.08em; color: #424874; margin-bottom: 14px;}
+    .headline {
+      font-family: 'Montserrat', Arial, sans-serif;
+      font-weight: 500;
+      font-size: 1.06em;
+      color: #232d47;
+      margin-bottom: 12px;
+      letter-spacing: .8px;
+    }
     .header-info {
-      margin-bottom: 25px;
-      border-bottom: 1px solid #e0e7fc;
+      margin-bottom: 30px;
+      border-bottom: 1px solid #ececf7;
       padding-bottom: 16px;
     }
+    .header-info a {
+      display: inline-block;
+      margin-top: 2px;
+      color: #f67280;
+      font-weight: 700;
+      background: #fbeee7;
+      border-radius: 7px;
+      padding: 2px 11px 2px 7px;
+      text-decoration: none;
+      font-size: 1em;
+      transition: background 0.2s;
+    }
+    .header-info a:hover { background: #fad4d4; }
     .tabs {
       display: flex;
       justify-content: center;
-      gap: 18px;
-      margin-bottom: 4px;
+      gap: 20px;
+      margin-bottom: 3px;
       margin-top: 14px;
+      background: none;
     }
     .tabs button {
       font-family: 'Montserrat', Arial, sans-serif;
       font-weight: 700;
-      background: #deeafb;
+      background: #6c63ff22;
       border: none;
-      padding: 14px 24px;
-      border-radius: 12px 12px 0 0;
-      color: #495c83;
-      font-size: 1.05em;
-      box-shadow: 0 4px 24px #e0c3fc33;
+      padding: 16px 28px 13px 28px;
+      border-radius: 13px 13px 0 0;
+      color: #232d47;
+      font-size: 1.15em;
+      box-shadow: 0 4px 20px #eeeef944;
       cursor: pointer;
-      opacity: 0.92;
-      transition: background 0.18s, color 0.18s, opacity 0.2s;
+      opacity: .89;
+      transition: background .16s, color .18s, font-size .2s, letter-spacing .2s;
+      letter-spacing: .7px;
+      position: relative;
     }
     .tabs button.active, .tabs button:hover {
-      background: #4361ee;
+      background: #6c63ff;
       color: #fff;
+      font-size: 1.21em;
+      letter-spacing: 1.1px;
       opacity: 1;
+      box-shadow: 0 6px 18px #cfbfa244;
     }
     .tab-content {
       display: none;
-      background: #f8fbff;
-      border-radius: 0 0 14px 14px;
-      min-height: 140px;
-      padding: 28px 23px 18px 23px;
-      margin-bottom: 14px;
-      margin-top: -4px;
-      box-shadow: 0 4px 16px #c2cadb15;
-      animation: fadeIn 0.33s;
+      background: #fafafa;
+      border-radius: 0 0 18px 18px;
+      min-height: 130px;
+      padding: 34px 34px 20px 34px;
+      margin-bottom: 10px;
+      margin-top: -6px;
+      box-shadow: 0 4px 20px #cfbfa215;
+      animation: fadeIn 0.32s;
     }
     .tab-content.active { display: block; }
-    @keyframes fadeIn {
-      from { opacity: 0;}
-      to { opacity: 1;}
+    @keyframes fadeIn { from { opacity: 0;} to { opacity: 1;} }
+    h2 {
+      color: #f67280;
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin-top: 0;
     }
-    h2 { color: #4361ee; font-family: 'Montserrat', Arial, sans-serif;}
-    a { color: #4361ee; text-decoration: none;}
+    a { color: #6c63ff; text-decoration: none;}
     a:hover { text-decoration: underline; }
-    .email-link {
-      font-weight: 700;
-      background: #deeafb;
-      border-radius: 5px;
-      padding: 2px 8px;
-      color: #4361ee;
-      text-decoration: none;
-      transition: background 0.25s;
+    .feature-emoji {
+      font-size: 2em;
+      margin-right: 7px;
+      vertical-align: middle;
+      opacity: .75;
     }
-    .email-link:hover { background: #b7e3fc;}
+
     @media (max-width: 700px) {
-      .container { padding:14px 2vw;}
-      .tabs { gap:6px; }
-      .tabs button { padding: 8px 6px; font-size: 0.95em;}
-      h1 { font-size: 1.67em;}
+      .container { padding:12px 1vw;}
+      .tabs { gap:7px; }
+      .tabs button { padding: 8px 4px; font-size: 0.93em;}
+      h1 { font-size: 1.38em;}
+      .tab-content { padding: 22px 10px;}
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header-info">
-      <h1>Anas EL AMRANY</h1>
+      <h1><span class="feature-emoji">👋</span>Anas EL AMRANY</h1>
       <div class="headline">Computer Science Engineering Student at ENSEEIHT</div>
       <div style="margin-bottom:2px;">
         Email:
-        <a href="mailto:elamranianas291@gmail.com" class="email-link">elamranianas291@gmail.com</a>
+        <a href="mailto:elamranianas291@gmail.com">elamranianas291@gmail.com</a>
       </div>
     </div>
     <div class="tabs">
@@ -117,30 +144,29 @@
       <button onclick="showTab('sports')">Sports & Activities</button>
       <button onclick="showTab('career')">Career Development</button>
     </div>
-    
     <div id="home" class="tab-content active">
-      <h2>Home</h2>
-      <p>Welcome to my portfolio! Explore my experiences, academic projects, and personal development as a computer science engineering student.</p>
+      <h2><span class="feature-emoji">🏡</span>Home</h2>
+      <p>Welcome to my portfolio! Explore my projects, skills, and experiences as a computer science engineering student.</p>
     </div>
     <div id="eng" class="tab-content">
-      <h2>Engineering Courses</h2>
-      <p>An overview of my engineering coursework and hands-on technical projects. <br> <em>(Replace with your details and highlights!)</em></p>
+      <h2><span class="feature-emoji">💻</span>Engineering Courses</h2>
+      <p>An overview of my technical coursework and hands-on engineering projects.</p>
     </div>
     <div id="mobility" class="tab-content">
-      <h2>Mobility</h2>
-      <p>Reflections and information about study abroad, exchange, or mobility programs. <br> <em>(Add your plans or experiences.)</em></p>
+      <h2><span class="feature-emoji">🌍</span>Mobility</h2>
+      <p>Reflections and details about study abroad, exchange, or research programs.</p>
     </div>
     <div id="civic" class="tab-content">
-      <h2>Civic Engagement</h2>
-      <p>My involvement in civic, social, and community activities. <br> <em>(Describe your participation or ideas here.)</em></p>
+      <h2><span class="feature-emoji">🤝</span>Civic Engagement</h2>
+      <p>Highlights of my civic, social, and volunteer activities.</p>
     </div>
     <div id="sports" class="tab-content">
-      <h2>Sports & Activities</h2>
-      <p>Extracurricular interests, clubs, and sports. <br> <em>(Share your hobbies and passions.)</em></p>
+      <h2><span class="feature-emoji">🏆</span>Sports & Activities</h2>
+      <p>Extracurricular interests, clubs, and personal passions.</p>
     </div>
     <div id="career" class="tab-content">
-      <h2>Career Development</h2>
-      <p>CV highlights, professional ambitions, and career growth plans. <br> <em>(Add your LinkedIn or upload your CV.)</em></p>
+      <h2><span class="feature-emoji">🚀</span>Career Development</h2>
+      <p>CV summary, career interests, and professional growth plans.</p>
     </div>
   </div>
   <script>
