--- a/index.html
+++ b/index.html
@@ -6,137 +6,114 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900;700;500&family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
+      background: #fafafb;
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(120deg,#f6d365 0%, #fda085 100%);
       font-family: 'Karla', Arial, sans-serif;
-      transition: background 0.5s;
-      display: flex; align-items: center; justify-content: center;
+      display: flex; align-items: flex-start; justify-content: center;
+      min-height: 100svh;
+    }
+    .bg-banner {
+      width: 100vw;
+      min-height: 320px;
+      height: 38vh;
+      background: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;
+      position: absolute;
+      top: 0; left: 0; z-index: 1; 
+      filter: blur(2px) brightness(0.6);
     }
     .container {
-      width: 95vw; max-width: 850px;
-      background: rgba(255,255,255,0.96);
-      border-radius: 30px;
-      box-shadow: 0 12px 60px #dfbfbf66, 0 4px 24px #ccc2fa44;
-      padding: 40px 50px 34px 50px;
-      min-height: 540px;
       position: relative;
-      overflow: hidden;
+      width: 95vw; max-width: 850px;
+      background: rgba(255,255,255,0.97);
+      border-radius: 28px;
+      box-shadow: 0 12px 60px #beb7f666, 0 4px 24px #8892fa44;
+      padding: 42px 44px 30px 44px;
+      margin-top: 62px;
+      z-index: 2;
+      min-height: 480px;
+      backdrop-filter: blur(0.5px);
+      overflow-x: hidden;
+    }
+    .header-info {
+      text-align: center;
+      padding-bottom: 15px;
+      border-bottom: 1.5px solid #ecedf6;
+      margin-bottom: 26px;
     }
     h1 {
-      font-family: 'Montserrat', Arial, sans-serif;
-      font-weight: 900;
-      color: #6c63ff;
-      font-size: 2.7em;
-      letter-spacing: 2px;
-      margin-bottom: 7px;
-      text-shadow: 0 2px 10px #dfbfbf33;
+      font-family: 'Montserrat', Arial, sans-serif; font-weight: 900;
+      color: #6457fa; font-size: 2.85em; margin: 0 0 2px 0; letter-spacing: 2px;
+      text-shadow: 0 2px 10px #cfc7ef22;
     }
     .headline {
       font-family: 'Montserrat', Arial, sans-serif;
-      font-weight: 500;
-      font-size: 1.06em;
-      color: #232d47;
-      margin-bottom: 12px;
-      letter-spacing: .8px;
-    }
-    .header-info {
-      margin-bottom: 30px;
-      border-bottom: 1px solid #ececf7;
-      padding-bottom: 16px;
+      font-weight: 500; font-size: 1.13em; color: #253468; margin-bottom: 12px;
+      letter-spacing: .7px;
     }
     .header-info a {
+      color: #f67280; font-weight: 700;
+      background: #fbeee7; border-radius: 7px; padding: 2px 11px 2px 7px;
+      text-decoration: none; font-size: 1em; transition: background 0.2s;
       display: inline-block;
-      margin-top: 2px;
-      color: #f67280;
-      font-weight: 700;
-      background: #fbeee7;
-      border-radius: 7px;
-      padding: 2px 11px 2px 7px;
-      text-decoration: none;
-      font-size: 1em;
-      transition: background 0.2s;
     }
-    .header-info a:hover { background: #fad4d4; }
+    .header-info a:hover { background: #fad4d4;}
+    /* Scrollable horizontal tabs */
     .tabs {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 3px;
-      margin-top: 14px;
+      display: flex; overflow-x: auto; gap: 18px; margin: 8px -44px 3px -44px;
+      padding: 0 20px 0 20px; scroll-snap-type: x mandatory;
       background: none;
     }
     .tabs button {
-      font-family: 'Montserrat', Arial, sans-serif;
-      font-weight: 700;
-      background: #6c63ff22;
-      border: none;
-      padding: 16px 28px 13px 28px;
-      border-radius: 13px 13px 0 0;
-      color: #232d47;
-      font-size: 1.15em;
-      box-shadow: 0 4px 20px #eeeef944;
-      cursor: pointer;
-      opacity: .89;
-      transition: background .16s, color .18s, font-size .2s, letter-spacing .2s;
-      letter-spacing: .7px;
-      position: relative;
+      scroll-snap-align: start;
+      font-family: 'Montserrat', Arial, sans-serif; font-weight: 700;
+      background: #e9eaff; border: none; outline: none;
+      padding: 16px 32px 13px 32px; border-radius: 16px;
+      color: #232d47; font-size: 1.14em; transition: background 0.18s, color 0.18s;
+      margin-bottom: 0; cursor: pointer; opacity: 0.92;
+      white-space: nowrap; letter-spacing: .7px;
+      min-width: 175px;
     }
-    .tabs button.active, .tabs button:hover {
-      background: #6c63ff;
+    .tabs button.active,
+    .tabs button:focus, .tabs button:hover {
+      background: #8f96e8;
       color: #fff;
-      font-size: 1.21em;
-      letter-spacing: 1.1px;
       opacity: 1;
-      box-shadow: 0 6px 18px #cfbfa244;
     }
     .tab-content {
-      display: none;
-      background: #fafafa;
-      border-radius: 0 0 18px 18px;
-      min-height: 130px;
-      padding: 34px 34px 20px 34px;
-      margin-bottom: 10px;
-      margin-top: -6px;
-      box-shadow: 0 4px 20px #cfbfa215;
+      display: none; background: #fcfcff;
+      border-radius: 0 0 18px 18px; min-height: 140px;
+      padding: 34px 24px 25px 34px; margin-top: 8px; margin-bottom: 10px;
+      box-shadow: 0 4px 14px #8892fa12;
       animation: fadeIn 0.32s;
     }
-    .tab-content.active { display: block; }
-    @keyframes fadeIn { from { opacity: 0;} to { opacity: 1;} }
+    .tab-content.active { display: block;}
+    @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
     h2 {
-      color: #f67280;
-      font-family: 'Montserrat', Arial, sans-serif;
-      margin-top: 0;
+      color: #f67280; font-family: 'Montserrat', Arial, sans-serif; margin-top: 0;
+      display: flex; align-items: center; font-size: 2em; margin-bottom: 16px;
     }
+    .feature-emoji { font-size: 1.5em; margin-right: 13px; opacity: .85;}
     a { color: #6c63ff; text-decoration: none;}
-    a:hover { text-decoration: underline; }
-    .feature-emoji {
-      font-size: 2em;
-      margin-right: 7px;
-      vertical-align: middle;
-      opacity: .75;
-    }
-
-    @media (max-width: 700px) {
-      .container { padding:12px 1vw;}
-      .tabs { gap:7px; }
-      .tabs button { padding: 8px 4px; font-size: 0.93em;}
-      h1 { font-size: 1.38em;}
-      .tab-content { padding: 22px 10px;}
+    a:hover { text-decoration: underline;}
+    @media (max-width: 800px) {
+      .container { padding:12px 2vw;}
+      .tabs button { font-size: 0.88em; padding: 10px 18px; min-width: 135px;}
+      h1 { font-size: 1.65em;}
     }
   </style>
 </head>
 <body>
+  <div class="bg-banner"></div>
   <div class="container">
     <div class="header-info">
       <h1><span class="feature-emoji">👋</span>Anas EL AMRANY</h1>
       <div class="headline">Computer Science Engineering Student at ENSEEIHT</div>
-      <div style="margin-bottom:2px;">
-        Email:
-        <a href="mailto:elamranianas291@gmail.com">elamranianas291@gmail.com</a>
+      <div>
+        Email: <a href="mailto:elamranianas291@gmail.com">elamranianas291@gmail.com</a>
       </div>
     </div>
-    <div class="tabs">
+    <div class="tabs" tabindex="0">
       <button onclick="showTab('home')" class="active">Home</button>
       <button onclick="showTab('eng')" >Engineering Courses</button>
       <button onclick="showTab('mobility')">Mobility</button>
