--- a/index.html
+++ b/index.html
@@ -2,114 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Anas EL AMRANY - Scrollable E-Portfolio</title>
+  <title>Anas EL AMRANY - E-Portfolio Scroll Reveal</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:900,700,400|Roboto:400,300&display=swap" rel="stylesheet">
   <style>
-    html, body {
-      margin: 0; padding: 0;
-      min-height:100vh;
-      scroll-behavior: smooth;
-      font-family: 'Roboto', Arial, sans-serif;
-    }
-    body {
-      background: #191d22;
-    }
+    html, body { margin: 0; padding: 0; min-height: 100vh; background: #181c1f; }
+    body { font-family: 'Roboto', Arial, sans-serif; }
+
     .section {
       min-height: 100vh;
       width: 100vw;
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      position: relative;
+      background: #232c38;
       cursor: pointer;
-      color: #fff;
-      transition: background 0.6s;
+      overflow: hidden;
     }
-    .section .overlay {
-      position: absolute; top:0; left:0; width:100vw; height:100vh; z-index:0;
-      background: rgba(16,20,32,0.26);
-      mix-blend-mode: multiply;
-      pointer-events:none;
+    .section .bgimg {
+      position: absolute; top:0; left:0; width:100vw; height:100vh; z-index:1;
+      background-position: center;
+      background-size: cover;
+      filter: blur(0.3px) brightness(0.84) saturate(1.07);
+      transition: filter 0.5s;
     }
+    /* Change background for each tab below */
+    .section.home .bgimg { background-image: url('https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=1200&q=80'); }
+    .section.eng .bgimg { background-image: url('https://images.unsplash.com/photo-1468779060412-f5b1f0647b36?auto=format&fit=crop&w=1200&q=80'); }
+    .section.mobility .bgimg { background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80'); }
+    .section.civic .bgimg { background-image: url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1200&q=80'); }
+    .section.sports .bgimg { background-image: url('https://images.unsplash.com/photo-1461897104016-0b3b0bf1cfb6?auto=format&fit=crop&w=1200&q=80'); }
+    .section.career .bgimg { background-image: url('https://images.unsplash.com/photo-1450101499163-c8848c66eeff?auto=format&fit=crop&w=1200&q=80'); }
+
     .tab-title {
-      position: relative; z-index:3;
-      font-family: "Montserrat", Arial, sans-serif;
-      font-size: clamp(2.4em, 7vw, 5em);
-      font-weight: 900;
+      position: relative; z-index:4; color: #fff;
+      font-family: 'Montserrat', Arial, sans-serif; font-weight: 900;
+      text-shadow: 0 6px 32px #181c1f60, 0 1px 0 #222;
+      font-size: clamp(2.2em, 7vw, 5.2em);
       letter-spacing: 2px;
-      text-align:center;
-      margin-bottom: 0.3em;
-      text-shadow: 0 4px 32px #191d2299, 0 1px 0 #222;
-      background: rgba(37,33,50,0.34);
-      border-radius: 25px;
-      padding: 20px 26px 18px 26px;
-      backdrop-filter: blur(3px);
-      box-shadow: 0 6px 36px #0003;
+      text-align: center;
+      margin-bottom: 0.25em;
+      border-radius: 100vw;
+      padding: 24px 36px;
+      background: rgba(38, 41, 56, 0.36);
+      box-shadow: 0 6px 32px #10121955;
+      transition: opacity 0.6s, filter 0.5s;
+      will-change: opacity;
+    }
+    .section.expanded .tab-title {
+      opacity: 0.04;
+      filter: blur(10px);
+      pointer-events: none;
     }
     .tab-content {
-      position: relative; z-index:5;
-      max-width: 650px;
-      background: rgba(245,245,255,0.90);
-      color: #222;
-      font-size: 1.16em;
-      margin: 0 auto;
-      margin-top: 36px;
-      border-radius: 24px;
-      box-shadow: 0 10px 60px #0005;
-      padding: 36px 38px;
+      position: absolute;
+      left: 50%; top: 52%;
+      transform: translate(-50%, -54%) scale(0.12);
+      width: 440px; max-width: 84vw;
+      min-height: 120px;
       opacity: 0;
+      z-index: 10;
+      border-radius: 48vw / 30vw;
+      background: rgba(245,245,255,0.88);
+      box-shadow: 0 14px 80px #0005, 0 2px 24px #6a8ee088;
+      color: #222;
+      display: flex; flex-direction: column; align-items: center;
+      padding: 38px 34px 28px 34px;
       pointer-events: none;
-      transition: opacity 0.65s, transform 0.59s;
-      transform: translateY(60px) scale(0.98);
+      transition:
+        opacity 0.57s cubic-bezier(0.5,1,0.89,1),
+        transform 0.59s cubic-bezier(.41,1.5,.83,1),
+        box-shadow 0.5s;
+      will-change: transform, opacity;
     }
     .section.expanded .tab-content {
       opacity: 1;
+      transform: translate(-50%, -54%) scale(1);
       pointer-events: all;
-      transform: translateY(0) scale(1.01);
     }
-    .hint {
-      position: absolute; bottom:32px; left:50%; transform:translateX(-50%);
-      color: #fff; font-size: 1.09em; z-index: 8;
-      opacity: 0.7; padding: 7px 15px;
-      border-radius: 18px;
-      background:rgba(20,23,33,0.29);
-      letter-spacing: 1px;
+    .tab-content h2 {
+      color: #3a398a; font-family: 'Montserrat',Arial,sans-serif;
+      font-size: 2em;margin-bottom: 16px;margin-top:0;
+      letter-spacing: .6px;
+      text-align: center;
+      text-shadow: 0 1px 4px #fff6;
     }
-    /* Background images unique for each section */
-    .section.home { background:
-      url('https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat; }
-    .section.eng { background:
-      url('https://images.unsplash.com/photo-1468779060412-f5b1f0647b36?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat; }
-    .section.mobility { background:
-      url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat; }
-    .section.civic { background:
-      url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;}
-    .section.sports { background:
-      url('https://images.unsplash.com/photo-1461897104016-0b3b0bf1cfb6?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;}
-    .section.career { background:
-      url('https://images.unsplash.com/photo-1450101499163-c8848c66eeff?auto=format&fit=crop&w=1200&q=80') center/cover no-repeat;}
-    /* Show tab content on click */
     .tab-content .close-btn {
-      position:absolute;top:16px;right:22px;font-size:1.22em;
-      color:#4361ee;background:none;border:none;cursor:pointer;font-weight:700;
-      background:rgba(220,220,245,0.58);
-      border-radius:12px;padding:2px 14px;transition:background 0.15s;
+      position: absolute; top: 15px; right: 24px; font-size: 1.42em;
+      color: #6c63ff; background: rgba(220,220,245,0.58); border: none;
+      border-radius: 16px; padding: 2px 18px 2px 13px; cursor: pointer; font-weight: 700;
+      transition: background 0.18s;
+      z-index: 58;
     }
-    .tab-content .close-btn:hover { background:#ffd6d6;}
-    /* Responsive styles */
-    @media (max-width: 700px) {
-      .tab-content { max-width: 95vw; padding:16vw 4vw;}
-      .tab-title {font-size:7vw;padding:18px;}
+    .tab-content .close-btn:hover { background: #fad6eb; }
+    .hint {
+      position: absolute; bottom:24px; left:50%; transform:translateX(-50%);
+      color: #fff; font-size: 1.06em; z-index: 8;
+      opacity: 0.8; padding: 10px 18px;
+      border-radius: 24px;
+      background: rgba(20,23,33,0.30); letter-spacing: 1px;
+      pointer-events: none;
+      font-family: 'Montserrat',Arial,sans-serif;
+    }
+    @media (max-width:700px) {
+      .tab-content { width: 99vw; padding:9vw 2vw; border-radius: 44vw/32vw;}
+      .tab-content h2 {font-size: 6vw;}
+      .tab-title {padding: 18px;}
+      .hint {font-size: 3vw;}
     }
   </style>
 </head>
 <body>
   <div class="section home" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Home</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Welcome!</h2>
       <p>
         I'm Anas EL AMRANY, Computer Science Engineering Student at ENSEEIHT.<br>
@@ -119,65 +128,59 @@
     <div class="hint">Click to see more</div>
   </div>
   <div class="section eng" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Engineering Courses</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Engineering Projects</h2>
-      <p>
-        Selected technical coursework and hands-on programming.<br>
-        - Ada interactive multiplication tables tool<br>
-        - Project-based learning in modeling/simulation<br>
-        - Studies in algorithms, data structures, and artificial intelligence.
+      <p>Selected technical coursework and hands-on programming:<br>
+      - Ada interactive multiplication tables tool<br>
+      - Project-based learning in modeling/simulation<br>
+      - Studies in algorithms, data structures, and artificial intelligence.
       </p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
   <div class="section mobility" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Mobility</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Mobility & Exchange</h2>
-      <p>
-        Planning for potential international experiences or exchanges.<br>
-        Reflections on teamwork, adaptation, language, and global opportunities.
+      <p>Planning for potential international experiences or exchanges.<br>
+      Reflections on teamwork, adaptation, language, and global opportunities.
       </p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
   <div class="section civic" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Civic Engagement</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Civic Engagement</h2>
-      <p>
-        Involvement in social, creative, and environmental initiatives.<br>
+      <p>Involvement in social, creative, and environmental initiatives.<br>
         Example: "King Kong Trial" theatre project, climate mural, collaborative workshops.
       </p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
   <div class="section sports" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Sports & Activities</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Extracurricular Life</h2>
-      <p>
-        Participation in sports, clubs, and personal development.<br>
-        <br>
-        Passionate about teamwork, energy, and diverse interests beyond academics.
-      </p>
+      <p>Participation in sports, clubs, and personal development.<br>
+      Passionate about teamwork, energy, and diverse interests beyond academics.</p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
   <div class="section career" onclick="expandSection(this)">
-    <div class="overlay"></div>
+    <div class="bgimg"></div>
     <div class="tab-title">Career Development</div>
     <div class="tab-content">
-      <button class="close-btn" onclick="closeSection(event)">× Close</button>
+      <button class="close-btn" onclick="closeSection(event)">×</button>
       <h2>Professional Growth</h2>
       <p>
         Explore my CV, career interests, and ambitions.<br>
@@ -199,5 +202,6 @@
   </script>
 </body>
 </html>
+
 
 
