Change background images to high-res versions
Updated background image URLs to use high-resolution links.

--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
       filter: blur(0.3px) brightness(0.84) saturate(1.07);
       transition: filter 0.5s;
     }
-    /* Unique background for each tab using Drive images */
+    /* High-res Google Drive backgrounds */
     .section.home .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=1d3dLqkg3RlZYHkQWmO9s9m0V6mw-ehKn');
+      background-image: url('https://drive.google.com/uc?id=1d3dLqkg3RlZYHkQWmO9s9m0V6mw-ehKn');
     }
     .section.eng .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=1QzghwnwuXogDUnUM2kaLJ2U-xOZ4wgfC');
+      background-image: url('https://drive.google.com/uc?id=1QzghwnwuXogDUnUM2kaLJ2U-xOZ4wgfC');
     }
     .section.mobility .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=1gYe9-cu1lkes-rR9VOFiPj4dOz3Iz40s');
+      background-image: url('https://drive.google.com/uc?id=1gYe9-cu1lkes-rR9VOFiPj4dOz3Iz40s');
     }
     .section.civic .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=1Cp1dhCsPEmR2--cPEGVj4O7XGV_wIx2-');
+      background-image: url('https://drive.google.com/uc?id=1Cp1dhCsPEmR2--cPEGVj4O7XGV_wIx2-');
     }
     .section.sports .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=1LOKnhQ9KkBTRsepalQWn4DWdV9-cSJPz');
+      background-image: url('https://drive.google.com/uc?id=1LOKnhQ9KkBTRsepalQWn4DWdV9-cSJPz');
     }
     .section.career .bgimg {
-      background-image: url('https://drive.google.com/thumbnail?id=144o9Rh4wv_fTv9cZ5F6hoZ7CPKiU2xmf');
+      background-image: url('https://drive.google.com/uc?id=144o9Rh4wv_fTv9cZ5F6hoZ7CPKiU2xmf');
     }
 
     .tab-title {
@@ -237,6 +237,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
